fastrace-macro/tests/ui/err/name-is-not-an-assignment-expression.stderr
error: expected identifier
 --> tests/ui/err/name-is-not-an-assignment-expression.rs:5:9
  |
5 | #[trace("b")]
  |         ^^^
