fastrace-macro/tests/ui/err/name-is-not-an-assignment-expression.rs
use fastrace::trace;

#[trace("b")]
fn f() {}

fn main() {}
